--- a/src/Makefile
+++ b/src/Makefile
@@ -2,20 +2,21 @@
 
 # 1. Modify the path to the executable file only if you really need to place it elsewhere.
 #    If you change it, when you call qdyn.m you must set the input EXEC_PATH as set here
-EXEC_PATH = .
+#EXEC_PATH = .
 #EXEC_PATH = $(HOME)/qdyn_svn/trunk/src/
 #EXEC_PATH = $(HOME)/bin/
+EXEC_PATH = /home/crodriguezpiceda/buildqdyn/qdynv01/
 
 # 2. Comment/uncomment/add/modify the lines corresponding to your compiler:
 
 # GNU, serial
 #Only MPI no openMP
-F90 = mpif90
-OPT = -O3 -Wall
-# For parallel runs with MPI+OpenMP:
 #F90 = mpif90
+#OPT = -O3 -Wall
+# For parallel runs with MPI+OpenMP:
+F90 = mpif90
 #OPT = -O3 -Wall -fopenmp
-#OPT = -O2 -w
+OPT = -O2 -w
 #-- Intel Fortran --
 # F90 = ifort
 # OPT = -O3 -ip -ipo
@@ -50,8 +51,10 @@ PREPROC = -cpp
 # CFLAGS = -B/usr/lib/x86_64-linux-gnu
 #CFLAGS = '' 
 
+#OPT = -O3 -Wall
+
 travis: F90 = mpif90
-	OPT = -O3 -Wall
+	OPT = -O2 -w
 	PREPROC = -cpp
 
 #== END USER SETTINGS =============================================
