--- a/src/Makefile
+++ b/src/Makefile
@@ -2,9 +2,10 @@
 
 # 1. Modify the path to the executable file only if you really need to place it elsewhere.
 #    If you change it, when you call qdyn.m you must set the input EXEC_PATH as set here
-EXEC_PATH = .
+#EXEC_PATH = .
 #EXEC_PATH = $(HOME)/qdyn_svn/trunk/src/
 #EXEC_PATH = $(HOME)/bin/
+EXEC_PATH = /home/crodriguezpiceda/buildqdyn/qdyn_vintel/
 
 # 2. Comment/uncomment/add/modify the lines corresponding to your compiler:
 
@@ -19,6 +20,9 @@ OPT = -O3 -Wall
 #-- Intel Fortran --
 # F90 = ifort
 # OPT = -O3 -ip -ipo
+# Intel fortran with parallel runs with MPI
+F90 = mpiifort
+OPT = -O3
 # For parallel runs with OpenMP:
 #OPT = -O3 -ip -ipo -parallel -openmp -par-threshold:50
 #-no-inline-factor
@@ -43,16 +47,16 @@ OPT = -O3 -Wall
 
 # 3. Set the compiler option that enables preprocessing in your compiler
 # ifort
-# PREPROC = -fpp
+PREPROC = -fpp
 # gfortran
-PREPROC = -cpp
+#PREPROC = -cpp
 #PG, KAUST server
 # CFLAGS = -B/usr/lib/x86_64-linux-gnu
 #CFLAGS = '' 
 
-travis: F90 = mpif90
-	OPT = -O3 -Wall
-	PREPROC = -cpp
+travis: F90 = mpiifort
+	OPT = -O3
+	PREPROC = -fpp
 
 #== END USER SETTINGS =============================================
 
